--- a/DNSserver.html
+++ b/DNSserver.html
@@ -90,11 +90,11 @@
 					</section>
 					<section>
 						<h3>Phone</h3>
-						<p><a href="#">(606) 694-4766</a></p>
+						<p><a>(606) 694-4766</a></p>
 					</section>
 					<section>
 						<h3>Email</h3>
-						<p><a href="#" target="null">ashokkumar.bharathidasan@outlook.com</a></p>
+						<p><a>ashokkumar.bharathidasan@outlook.com</a></p>
 					
 					</section>
 					<section>
