--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Ashok's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">passionately curious!</a>
+						<a  class="logo">passionately curious!</a>
 					</header>
 
 				<!-- Nav -->
@@ -58,10 +58,10 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Ashok Kumar Bharathidasan</h2>
+									<h2>Ashok Kumar Bharathidasan</h2>
 									<p>An Army veteran with a unique set of skills, education and experience passionately pursuing a career in the IT industry.</p>
 								</header>
-								<a href="#" class="image fit"></p><img class="resize" src="images/pic01.jpg" alt="" /></a>
+								<a class="image fit"></p><img class="resize" src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="portfolio.html" class="button large">Check it out</a></li>
 								</ul>
