--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Passionately Curious!</a>
+						<a class="logo">Passionately Curious!</a>
 					</header>
 
 				<!-- Nav -->
@@ -220,9 +220,9 @@
 											
 																					</ul>
 										<ul class="actions fit">
-											<li><a href="https://www.youracclaim.com/badges/078fecf5-4011-49d5-9a1f-1cd719e559d7/linked_in_profile " class="button fit" target="null">Azure Fundamentals</a></li>
+											<li><a href="https://www.youracclaim.com/badges/078fecf5-4011-49d5-9a1f-1cd719e559d7/linked_in_profile " target="null" class="button fit">Azure Fundamentals  </a></li>
 											<li><a href="https://www.certmetrics.com/amazon/public/badge.aspx?i=9&t=c&d=2020-03-17&ci=AWS01296695" target="null" class="button fit">AWS Certified Cloud Practitioner</a></li>
-											<li><a href="https://www.youracclaim.com/badges/18d5d2f4-0911-4c56-be95-56642f914169/linked_in_profile" target="null" class="button fit">MTA: Networking Fundamentals</a></li>
+											<li><a href="https://www.youracclaim.com/badges/18d5d2f4-0911-4c56-be95-56642f914169/linked_in_profile" target="null" class="button fit">Networking Fundamentals</a></li>
 										</ul>
 										
 									</div>
