--- a/webserver.html
+++ b/webserver.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Passionately Curious!</a>
+						<a  class="logo">Passionately Curious!</a>
 					</header>
 
 				<!-- Nav -->
