--- a/portfolio.html
+++ b/portfolio.html
@@ -180,9 +180,9 @@
 											</thead>
 											<tbody>
 												<tr>
-													<td>Ph.D in Dairy Microbiology</td>
+													<td>Ph.D in Dairy Microbiology <br>(Incomplete)</td>
 													<td>South Dakota State University</td>
-													<td>Jan 2015- Jan 2016 (Incomplete)</td>
+													<td>Jan 2015- Jan 2016 </td>
 												</tr>
 												<tr>
 													<td>Master of Science in Food, Agricultural, & Biological Engineering</td>
