--- a/portfolio.html
+++ b/portfolio.html
@@ -182,7 +182,7 @@
 												<tr>
 													<td>Ph.D in Dairy Microbiology <br>(Incomplete)</td>
 													<td>South Dakota State University</td>
-													<td>Jan 2015- Jan 2016 </td>
+													<td>2015-2016 (Incomplete) </td>
 												</tr>
 												<tr>
 													<td>Master of Science in Food, Agricultural, & Biological Engineering</td>
