--- a/cloudserver.html
+++ b/cloudserver.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Project 3</title>
+		<title>Ashok's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,7 +36,7 @@
 							<li><a href="https://twitter.com/Ashok03005" target="null" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							
 							<li><a href="https://www.linkedin.com/in/ashok-kumar-bharathidasan-64985156/" target="null" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://github.com/Ashok-CLD/ashok.github.io" target="null" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/Ashokcloud/portfolio" target="null" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.cloudmssa.com" target="null" class="content"><span class="label">Blog</span></a></li>			
 						</ul>
 					</nav>
@@ -98,7 +98,7 @@
 				<li><a href="https://twitter.com/Ashok03005" target="null" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 		
 		<li><a href="https://www.linkedin.com/in/ashok-kumar-bharathidasan-64985156/" target="null" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-		<li><a href="https://github.com/Ashok-CLD/ashok.github.io" target="null" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+		<li><a href="https://github.com/Ashokcloud/portfolio" target="null" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 		<li><a href="https://www.cloudmssa.com" target="null" class="content"><span class="label">Blog</span></a></li>	
 			</ul>
 		</section>
