--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Portfolio</title>
+		<title>Ashok's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -39,7 +39,7 @@
 							<li><a href="https://twitter.com/Ashok03005" target="null" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							
 							<li><a href="https://www.linkedin.com/in/ashok-kumar-bharathidasan-64985156/" target="null" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://github.com/Ashok-CLD/ashok.github.io" target="null" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/Ashokcloud/portfolio" target="null" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.cloudmssa.com" target="null" class="content"><span class="label">Blog</span></a></li>		
 						</ul>
 					</nav>
@@ -180,9 +180,9 @@
 											</thead>
 											<tbody>
 												<tr>
-													<td>Ph.D in Dairy Microbiology <br>(Incomplete)</td>
+													<td>Ph.D in Dairy Microbiology<br>(Incomplete)</br></td>
 													<td>South Dakota State University</td>
-													<td>2015-2016 (Incomplete)</td>
+													<td>01/2015-01/2016 (Incomplete)</td>
 												</tr>
 												<tr>
 													<td>Master of Science in Food, Agricultural, & Biological Engineering</td>
@@ -272,7 +272,7 @@
 							<li><a href="https://twitter.com/Ashok03005" target="null" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					
 					<li><a href="https://www.linkedin.com/in/ashok-kumar-bharathidasan-64985156/" target="null" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-					<li><a href="https://github.com/Ashok-CLD/ashok.github.io" target="null" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/Ashokcloud/portfolio" target="null" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="https://www.cloudmssa.com" target="null" class="content"><span class="label">Blog</span></a></li>	
 						</ul>
 					</section>
