--- a/portfolio.html
+++ b/portfolio.html
@@ -115,12 +115,15 @@
 									</div>
 									<div><h2><center>Experience</center></h2>
 										<h3>Student, Microsoft Software and Systems Academy, Schofield Barracks, HI	      Jan 2020 – Present</h3>
-												<p>Microsoft Software and Systems Academy is an intensive learning environment focusing on building and maintaining enterprise-level physical, cloud and hybrid networks, as well as maintaining physical and virtual servers and Microsoft Azure administration. </p>
-											<ul><li>Installed and configured Hyper-V, Virtual Machines and Server Core. Installed a Server Core option for Windows Server 2016 on a Virtual Machine.</li>
-											<li>Experienced with High Availability and Disaster Recovery. Configured and Implemented Failover Clustering.</li>
-											<li>Managed remote-access technologies in Windows Server 2016 for users to connect securely to data and resources in organizational networks, including VPN, DirectAccess, Routing, and Web Application Proxy.</li>
-										<li>Configured and Managed Active Directory services such as Federation Servers, Domain Services, Certificate Services, and Right Management Services.</li>
-									<li>Configured and managed Azure services including subscription, identity, resource groups, virtual machines, virtual networks, and storage accounts.</li>	
+												<p>Microsoft Software and Systems Academy is an intensive learning program designed to equip transitioning service members with the most sought-after skills to prepare them for a successful career in the IT industry.  </p>
+											<ul><li>Server & Cloud Administraion trainee with hands-on training in implementing, configuring and securing physical, virtual and hybrid infrastructures.</li>
+											<li>Designed, configured and deployed a fully functional DNS sinkhole, DNS resolver, VPN server, Web server for a local network.</li>
+											<li>Experienced in designing network architecture diagrams for various scenarios encompassing network, compute, and storage resources for on-premise, cloud, and hybrid environments.</li>
+											<li>Installed and configured AD DS, AD CS, AD FS, and AD RMS server roles</li>
+											<li>Installed, configured and deployed DNS, DHCP, and IPAM servers.</li>
+											<li>Configured and managed Azure services and resources including VMs, virtual networks, storage accounts, Azure Backup, and Azure Active Directory..</li>
+											<li>Managed, monitored and troubleshot Azure resources using Azure Monitoring Tools, Azure PowerShell, and Azure Cloud Shell.</li>
+												
 									<li>
 										Implemented Microsoft Azure infrastructure solutions using Azure Resource Manager.
 									</li>
@@ -145,13 +148,13 @@
 										<h3>Graduate Research/Teaching Assistant, South Dakota State University, Brookings, SD &nbsp;&nbsp;  Jan 2015-Jan 2016</h3>
 										<ul>
 											<li>Served as Lab Manager and efficiently managed lab supplies procurement resulting in a constant availability of lab supplies for the 12 member research group.</li>
-											<li>Taught a course to 40 senior undergraduate students, mentored research projects, written research proposals and reviewed technical manuscripts.</li>
-											<li>Performed microbial analysis of many industrial samples, interpreted results, prepared technical reports for clients. </li>
+											<li>Taught a course to 40 senior undergraduate students, mentored 3 research projects, written 2 research proposals that brought $80,000 funding to the department.</li>
+											<li>Performed microbial analysis of numerous industrial samples, interpreted results and promptly reported to customers resulting in more business collaborations.</li>
 										
 										</ul>
 										<h3>Food Safety Analyst, Smithfield Packing Co, Inc., Grayson, KY	&nbsp;&nbsp;	       Jun 2014-Jan 2015</h3>
 										<ul>
-											<li>Devised and successfully implemented a food safety plan to reduce the number of bacterial contamination incidences and product recall.</li>
+											<li>Devised and successfully implemented a food safety plan to reduce the number of bacterial contamination incidences and product recall by 30%.</li>
 											<li>Consistently trained around 200 employees, corrected and enforced best food safety practices to improve customers' confidence in the product.</li>
 											<li>Pro-actively identified potentially contamination-prone areas, brought to the management’s attention and addressed them by working across cross-functional teams.</li>
 										</ul>
