--- a/portfolio.html
+++ b/portfolio.html
@@ -148,7 +148,7 @@
 										<h3>Graduate Research/Teaching Assistant, South Dakota State University, Brookings, SD &nbsp;&nbsp;  Jan 2015-Jan 2016</h3>
 										<ul>
 											<li>Served as Lab Manager and efficiently managed lab supplies procurement resulting in a constant availability of lab supplies for the 12 member research group.</li>
-											<li>Taught a course to 40 senior undergraduate students, mentored 3 research projects, written 2 research proposals that brought $80,000 funding to the department.</li>
+											<li>Taught a course to senior undergraduate students, mentored research projects, written research proposals that brought funding to the department.</li>
 											<li>Performed microbial analysis of numerous industrial samples, interpreted results and promptly reported to customers resulting in more business collaborations.</li>
 										
 										</ul>
