--- a/DNSserver.html
+++ b/DNSserver.html
@@ -36,7 +36,7 @@
 							<li><a href="https://twitter.com/Ashok03005" target="null" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							
 							<li><a href="https://www.linkedin.com/in/ashok-kumar-bharathidasan-64985156/" target="null" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://github.com/Ashokcloud/portfolio" target="null" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/Ashokcloud" target="null" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.cloudmssa.com" target="null" class="content"><span class="label">Blog</span></a></li>		
 						</ul>
 					</nav>
@@ -103,7 +103,7 @@
 							<li><a href="https://twitter.com/Ashok03005" target="null" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					
 					<li><a href="https://www.linkedin.com/in/ashok-kumar-bharathidasan-64985156/" target="null" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-					<li><a href="https://github.com/Ashokcloud/portfolio" target="null" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/Ashokcloud" target="null" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="https://www.cloudmssa.com" target="null" class="content"><span class="label">Blog</span></a></li>	
 						</ul>
 					</section>
