--- a/portfolio.html
+++ b/portfolio.html
@@ -116,7 +116,7 @@
 									<div><h2><center>Experience</center></h2>
 										<h3>Student, Microsoft Software and Systems Academy, Schofield Barracks, HI	      Jan 2020 – Present</h3>
 												<p>Microsoft Software and Systems Academy is an intensive learning program designed to equip transitioning service members with the most sought-after skills to prepare them for a successful career in the IT industry.  </p>
-											<ul><li>Server & Cloud Administraion trainee with hands-on training in implementing, configuring and securing physical, virtual and hybrid infrastructures.</li>
+											<ul><li>Server & Cloud Administration trainee with hands-on training in implementing, configuring and securing physical, virtual and hybrid infrastructures.</li>
 											<li>Designed, configured and deployed a fully functional DNS sinkhole, DNS resolver, VPN server, Web server for a local network.</li>
 											<li>Experienced in designing network architecture diagrams for various scenarios encompassing network, compute, and storage resources for on-premise, cloud, and hybrid environments.</li>
 											<li>Installed and configured AD DS, AD CS, AD FS, and AD RMS server roles</li>
