--- a/portfolio.html
+++ b/portfolio.html
@@ -242,7 +242,7 @@
 										</ul>
 										<ul class="actions fit">
 											<li><a href="files/CQPA - certificate.pdf" target="null" class="button fit">Cerfitied Quality Process Analyst</a></li>
-											<li><a href="files/GCSS - Certificate.pdf" target="null" class="button fit">GCSS-Army (SAP) Certification</a></li>
+											<li><a href="files/GCSS - Certificate.pdf" target="null" class="button fit">GCSS-Army (SAP) Certification</a></li>
 											
 										</ul>
 
