--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
 											<ul>
 										
 												<li>CompTIA: Network+ ce, Security+ ce</li>
-												<li>Microsoft: MCSA – Windows Server 2016, Azure Administrator Associate (AZ-103), Azure Fundamentals (AZ-900), MTA - Networking Fundamentals (98-366) </li>
+												<li>Microsoft: MCSA (Windows Server 2016), Azure Administrator Associate (AZ-103), Azure Fundamentals (AZ-900), Networking Fundamentals (MTA 98-366) </li>
 												<li>AWS Certified Cloud Practitioner (CLF-C01) </li>
 											</ul>
 
