--- a/portfolio.html
+++ b/portfolio.html
@@ -111,7 +111,7 @@
 										</div>
 									</div>
 									<div><h2><center>Experience</center></h2>
-										<h3>Support Engineer, Microsoft, Charlotte, NC	      July 2020 – Present</h3>
+										<h3>Support Engineer, Microsoft, Charlotte, NC	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;      July 2020 – Present</h3>
 												<p>Provides outstanding technical support experience to Microsoft customers and partners globally in Azure Networking.</p>
 											<ul><li>Serves as frontline technical resources for customers daily and owning simple to complex network issues from problem identification to full resolution.</li>
 											<li>Resolves high severity escalated customer cases and continually strives to exceed customer expectations to ensure satisfaction.</li>
@@ -120,7 +120,7 @@
 											<li>Possesses technical expertise in Azure core networking technologies (VNet, ExR, VPN, NSG, LB) and specialty products (VWAN, AzFW, NAT Gateway, PE, Bastion).</li>	
 												
 									</ul>
-										<h3>Server & Cloud Administration Trainee, Microsoft Software and Systems Academy, Schofield Barracks, HI	      Jan 2020 – May 2020</h3>
+										<h3>Server & Cloud Administration Trainee, Microsoft Software and Systems Academy, Schofield Barracks, HI &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	      Jan 2020 – May 2020</h3>
 												<p>Microsoft Software and Systems Academy is an intensive learning environment focusing on providing  IT training and hands-on experience to transitioning service members & veterans to prepare them for a successful IT career. </p>
 											<ul><li>Gained hands-on training in implementing, configuring, and securing physical, virtual, and hybrid infrastructures.</li>
 											<li>Designed, configured, and deployed a fully functional DNS sinkhole, DNS resolver, VPN server, Web server for a local network.</li>
