--- a/portfolio.html
+++ b/portfolio.html
@@ -142,8 +142,9 @@
 	
 											</ul>
 											<h3>Supply Program Manager(U.S. Army) Schofield Barracks, HI &nbsp;   	      Jun 2016-April 2019</h3>
+										<p>Managed $19 million worth of property with meticulous planning and execution resulting in consistently achieving 100% accountability .</li>
 											<ul>
-												<li>Managed $19 million worth of property with meticulous planning and execution resulting in 100% accountability.</li>
+												
 												<li>Identified and divested $1.5 million worth of old/excess equipment, which significantly reduced the company’s manhour and expenditure requirement </li>
 												<li>Promoted and handpicked by the executive director to improve the underperforming supply operations. Overhauled and built an entirely new supply system that increased the operational efficiency from 54% to 96% within six months.</li>
 												<li>Frequently trained and advised 103 employees on property accountability that was instrumental in achieving and maintaining zero loss of property.</li>
