--- a/portfolio.html
+++ b/portfolio.html
@@ -225,13 +225,13 @@
 										<ul class="actions fit">
 											<li><a href="https://www.youracclaim.com/badges/fa71b4ba-3c53-4fbf-b4e8-2c0986e09c6a/linked_in_profile" target="null" class="button fit">CompTIA Network+ ce</a></li>
 											<li><a href="https://www.youracclaim.com/badges/7658cba2-3a9f-4825-9190-66759322086b/linked_in_profile" target="null" class="button fit">Comptia Sec+ ce</a></li>
-											<li><a href="https://www.youracclaim.com/badges/c386cbf4-cd2c-4b51-93a8-03a9cc6bf62c/linked_in_profile" target="null" class="button fit">MCSA - Windows Server 2016</a></li>
+											<li><a href="files/MCSA certification.pdf" target="null" class="button fit">MCSA - Windows Server 2016</a></li>
 											
 																					</ul>
 										<ul class="actions fit">
-											<li><a href="https://www.youracclaim.com/earner/earned/badge/e66fbbea-2fb5-46a1-9584-951d3d70b689" target="null" class="button fit">Azure Administrator Associate</a></li>
-											<li><a href="https://www.youracclaim.com/badges/078fecf5-4011-49d5-9a1f-1cd719e559d7/linked_in_profile " target="null" class="button fit">Azure Fundamentals  </a></li>
-											<li><a href="https://www.certmetrics.com/amazon/public/badge.aspx?i=9&t=c&d=2020-03-17&ci=AWS01296695" target="null" class="button fit">AWS Certified Cloud Practitioner</a></li>
+											<li><a href="files/Azure Administrator Associate.pdf" target="null" class="button fit">Azure Administrator Associate</a></li>
+											<li><a href="files/Azure Fundamentals Certification.pdf" target="null" class="button fit">Azure Fundamentals  </a></li>
+											<li><a href="files/AWS Certified Cloud Practitioner certificate.pdf" target="null" class="button fit">AWS Certified Cloud Practitioner</a></li>
 											
 										</ul>
 										<ul class="actions fit">
