--- a/portfolio.html
+++ b/portfolio.html
@@ -306,7 +306,7 @@
 				<section class="split contact">
 					<section class="alt">
 						<h3>Address</h3>
-						<p>GA</p>
+						<p>Georgia</p>
 						
 					</section>
 					<section>
