--- a/portfolio.html
+++ b/portfolio.html
@@ -68,8 +68,8 @@
 											<h3>Certifications</h3>
 											<ul>
 										
-												<li>CompTIA: Network+ ce, Security+ ce</li>
-												<li>Microsoft: MCSA (Windows Server 2016), Azure Network Engineer Associate (AZ-700), Azure Administrator Associate (AZ-103), Azure Fundamentals (AZ-900), Azure Networking Support Specialist, Introduction to Programming Using Python (MTA 98-381), Networking Fundamentals (MTA 98-366) </li>
+												<li><b>CompTIA:</b> Network+ ce, Security+ ce</li>
+												<li><b>Microsoft:</b> MCSA (Windows Server 2016), Azure Network Engineer Associate (AZ-700), Azure Administrator Associate (AZ-103), Azure Fundamentals (AZ-900), Azure Networking Support Specialist, Introduction to Programming Using Python (MTA 98-381), Networking Fundamentals (MTA 98-366) </li>
 												<li>AWS Certified Cloud Practitioner (CLF-C01) </li>
 											</ul>
 
